Bootstrap reverse-connected cloud Oyster boxes
